--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start:clear": "expo start --web --host localhost --clear",
     "web:clear": "expo start --web --host localhost --clear",
     "android": "expo start --android",
-    "ios": "expo start --ios"
+    "ios": "expo start --ios",
+    "build:web": "expo export --platform web"
   },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.2.3",
