--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@supabase/supabase-js": "^2.96.0",
     "@types/react": "~18.2.79",
     "expo": "^51.0.0",
+    "expo-clipboard": "~6.0.3",
     "expo-image-picker": "~15.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
