--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "expo": "^51.0.0",
     "expo-clipboard": "~6.0.3",
     "expo-image-picker": "~15.1.0",
+    "expo-print": "~13.0.1",
+    "expo-sharing": "~12.0.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
