--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@supabase/supabase-js": "^2.96.0",
     "@types/react": "~18.2.79",
     "expo": "^51.0.0",
+    "expo-av": "~14.0.7",
     "expo-clipboard": "~6.0.3",
+    "expo-file-system": "~17.0.1",
     "expo-image-picker": "~15.1.0",
     "expo-print": "~13.0.1",
     "expo-sharing": "~12.0.1",
